force-app/main/default/objects/Payment_Plan_Detail__c/fields/PPD_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>PPD_Payment_Status__c</fullName>
    <formula>IF(OR(TEXT( Remarks__c ) == &apos;Resale&apos;,TEXT(Remarks__c) ==&apos;Fully Paid&apos;), &apos;Fully Paid&apos;,
IF( Amount_Paid_With_Total_Discount__c &gt;=  Amount__c , &apos;Fully Paid&apos;,
IF( Amount_Paid_With_Total_Discount__c &gt; 0 &amp;&amp; Amount_Paid_With_Total_Discount__c &lt; Amount__c, &apos;Partially Paid&apos;, &apos;Pending Payment&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPD Payment Status</label>
    <type>Text</type>
</CustomField>