force-app/main/default/objects/Payment_Plan_Detail__c/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Premium</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>