force-app/main/default/objects/Payment_Plan_Detail__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>