force-app/main/default/objects/Payment_Plan_Detail__c/fields/Project_Inv__c.field-meta.xml
<CustomField>
    <fullName>Project_Inv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Payment_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>