force-app/main/default/objects/Payment_Plan_Detail__c/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <label>Property Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>