force-app/main/default/objects/Payment_Plan_Detail__c/fields/Property_Inv__c.field-meta.xml
<CustomField>
    <fullName>Property_Inv__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipName>Payment_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>