force-app/main/default/objects/Payment_Plan_Detail__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <label>Release Date</label>
    <type>DateTime</type>
</CustomField>