force-app/main/default/objects/Payment_Plan_Detail__c/fields/Run_Historical_LPF__c.field-meta.xml
<CustomField>
    <fullName>Run_Historical_LPF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Historical LPF</label>
    <type>Checkbox</type>
</CustomField>