force-app/main/default/objects/Payment_Plan_Detail__c/fields/Run_Paid_Unpaid_Historical__c.field-meta.xml
<CustomField>
    <fullName>Run_Paid_Unpaid_Historical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Paid/Unpaid Historical</label>
    <type>Checkbox</type>
</CustomField>