force-app/main/default/objects/Payment_Plan_Detail__c/fields/Second_Issue_Notice__c.field-meta.xml
<CustomField>
    <fullName>Second_Issue_Notice__c</fullName>
    <formula>Cheque_Date__c + 60</formula>
    <label>Second Issue Notice</label>
    <type>Date</type>
</CustomField>