force-app/main/default/objects/Payment_Plan_Detail__c/fields/Seq__c.field-meta.xml
<CustomField>
    <fullName>Seq__c</fullName>
    <label>Seq</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>