force-app/main/default/objects/Payment_Plan_Detail__c/fields/Seq_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Seq_in_Arabic__c</fullName>
    <description>This field is used to show the Sequence number in arabic</description>
    <label>Seq in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>