force-app/main/default/objects/Payment_Plan_Detail__c/fields/Sequence_Code__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Code__c</fullName>
    <label>Sequence Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>