force-app/main/default/objects/Payment_Plan_Detail__c/fields/SOA_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>SOA_Invoice_Date__c</fullName>
    <description>This field would store the Invoice Date from linked Invoice</description>
    <label>SOA Invoice Date</label>
    <type>Date</type>
</CustomField>