force-app/main/default/objects/Payment_Plan_Detail__c/fields/Split_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Split_Allowed__c</fullName>
    <formula>if(AND(Seq__c = 01,NOT(Is_Split_Record__c)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Allowed</label>
    <type>Checkbox</type>
</CustomField>