force-app/main/default/objects/Payment_Plan_Detail__c/fields/Termination_Case_SLA__c.field-meta.xml
<CustomField>
    <fullName>Termination_Case_SLA__c</fullName>
    <formula>Cheque_Date__c + 90</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Case SLA</label>
    <type>Date</type>
</CustomField>