force-app/main/default/objects/Payment_Plan_Detail__c/fields/Text_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Text_Remarks__c</fullName>
    <label>Text Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>