force-app/main/default/objects/Payment_Plan_Detail__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique_Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>