force-app/main/default/objects/Payment_Plan_Detail__c/fields/UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueCode__c</fullName>
    <externalId>true</externalId>
    <label>UniqueCode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>