force-app/main/default/objects/Payment_Plan_Detail__c/fields/Unit_Location__c.field-meta.xml
<CustomField>
    <fullName>Unit_Location__c</fullName>
    <label>Unit Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>