force-app/main/default/objects/Payment_Plan_Detail__c/fields/Yardi_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Created_Date__c</fullName>
    <label>Yardi Created Date</label>
    <type>DateTime</type>
</CustomField>