force-app/main/default/objects/Payment_Plan_Detail__c/fields/Yardi_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Modified_Date__c</fullName>
    <label>Yardi Modified Date</label>
    <type>DateTime</type>
</CustomField>