force-app/main/default/objects/Payment_Plan_Detail__c/recordTypes/Details_Master.recordType-meta.xml
<RecordType>
    <fullName>Details_Master</fullName>
    <active>true</active>
    <label>Details Master</label>
</RecordType>