force-app/main/default/objects/Payment_Plan_Detail__c/recordTypes/Details_Transanction.recordType-meta.xml
<RecordType>
    <fullName>Details_Transanction</fullName>
    <active>true</active>
    <label>Details Transanction</label>
</RecordType>