force-app/main/default/objects/Payment_Plan_Detail__c/recordTypes/Land.recordType-meta.xml
<RecordType>
    <fullName>Land</fullName>
    <active>true</active>
    <label>Land</label>
</RecordType>