force-app/main/default/objects/Payment_Plan_Detail__c/recordTypes/PPD_Exception.recordType-meta.xml
<RecordType>
    <fullName>PPD_Exception</fullName>
    <active>true</active>
    <label>PPD Exception</label>
</RecordType>