force-app/main/default/objects/Payment_Plan_Detail__c/recordTypes/PPD_Exception_History.recordType-meta.xml
<RecordType>
    <fullName>PPD_Exception_History</fullName>
    <active>true</active>
    <description>Payment plan exception history</description>
    <label>PPD Exception History</label>
</RecordType>